src/test/ui/rfc-2632-const-trait-impl/trait-where-clause.stderr
error[E0277]: the trait bound `T: Bar` is not satisfied
  --> $DIR/trait-where-clause.rs:15:5
   |
LL |     T::b();
   |     ^^^^ the trait `Bar` is not implemented for `T`
   |
note: required by a bound in `Foo::b`
  --> $DIR/trait-where-clause.rs:9:24
   |
LL |     fn b() where Self: ~const Bar;
   |                        ^^^^^^^^^^ required by this bound in `Foo::b`
help: consider further restricting this bound
   |
LL | fn test1<T: Foo + Bar>() {
   |                 +++++

error[E0277]: the trait bound `T: Bar` is not satisfied
  --> $DIR/trait-where-clause.rs:17:12
   |
LL |     T::c::<T>();
   |            ^ the trait `Bar` is not implemented for `T`
   |
note: required by a bound in `Foo::c`
  --> $DIR/trait-where-clause.rs:10:13
   |
LL |     fn c<T: ~const Bar>();
   |             ^^^^^^^^^^ required by this bound in `Foo::c`
help: consider further restricting this bound
   |
LL | fn test1<T: Foo + Bar>() {
   |                 +++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
